Updates to style to incorporate fixes to chatarea stretching too high.  Have a general wireframe of Mark's template, but had to remove the tooltip/resources area because it was crashing the js parser.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,7 +168,7 @@ a:active {
 .chatsend input {
 	border:0px;
 	width:100%;
-	height:100%;
+	height:10%;
 }
 
 .jScrollPaneContainer {
@@ -538,3 +538,37 @@ a.wav {
 	color:#bf0000;
 	background:url('../images/css/error-20x20.png') no-repeat top right;
 }
+/* FROM Blueprint CSS Framework 0.7.1 */
+#footer { clear: both; text-align: center; padding-top: 2em }
+#footer a,body {
+	color:#9999FF;
+}
+/* FROM TATSUMAKI CHAT DEMO */
+#messages {
+  margin-top: 1em;
+  margin-right: 3em;
+  width: 100%;
+}
+.avatar {
+  width: 25px;
+  vertical-align: top;
+}
+.avatar img {
+  width: 25px; height: 25px;
+  vertical-align: top;
+  margin-right: 0.5em;
+}
+.chat-message {
+  width: 70%;
+}
+.chat-message .name {
+  font-weight: bold;
+}
+.meta {
+  vertical-align: top;
+  color: #888;
+  font-size: 0.8em;
+}
+/* body {
+  margin: 1em 2em
+} */
